Fixed button alignment issue on plan cards

--- a/src/app/styles/PlanCard.module.css
+++ b/src/app/styles/PlanCard.module.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid lightgrey;
-    margin: 10rem 0;
+    margin: 10rem 1rem;
     border-radius: 5px;
     padding-top: 23px;
     padding-left: 23px;
@@ -51,4 +51,12 @@
 
 .checkmark {
     margin-right: .625rem;
+}
+
+.buttonContainer {
+    margin-top: auto;
+}
+
+.buttonContainer button {
+    width: 100%;
 }
